--- a/plugins/ImageViewer/ImageViewer_9.vcproj
+++ b/plugins/ImageViewer/ImageViewer_9.vcproj
@@ -49,6 +49,7 @@
 				PreprocessorDefinitions="_DEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				TargetEnvironment="1"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
 				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
 				InterfaceIdentifierFileName="$(InputName)_i.c"
@@ -143,6 +144,7 @@
 				PreprocessorDefinitions="_DEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				TargetEnvironment="3"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
 				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
 				InterfaceIdentifierFileName="$(InputName)_i.c"
@@ -237,6 +239,7 @@
 				AdditionalIncludeDirectories="..\..\shareaza"
 				SuppressStartupBanner="true"
 				TargetEnvironment="1"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
 				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
 				InterfaceIdentifierFileName="$(InputName)_i.c"
@@ -341,6 +344,7 @@
 				AdditionalIncludeDirectories="..\..\shareaza"
 				SuppressStartupBanner="true"
 				TargetEnvironment="3"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
 				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
 				InterfaceIdentifierFileName="$(InputName)_i.c"
@@ -452,42 +456,6 @@
 			<File
 				RelativePath="..\..\shareaza\Shareaza.idl"
 				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCMIDLTool"
-						TypeLibraryName="$(IntDir)/ShareazaOM.tlb"
-						HeaderFileName="ShareazaOM.h"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|x64"
-					>
-					<Tool
-						Name="VCMIDLTool"
-						TypeLibraryName="$(IntDir)/ShareazaOM.tlb"
-						HeaderFileName="ShareazaOM.h"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCMIDLTool"
-						TypeLibraryName="$(IntDir)/ShareazaOM.tlb"
-						HeaderFileName="ShareazaOM.h"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|x64"
-					>
-					<Tool
-						Name="VCMIDLTool"
-						TypeLibraryName="$(IntDir)/ShareazaOM.tlb"
-						HeaderFileName="ShareazaOM.h"
-					/>
-				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="StdAfx.cpp"
@@ -539,10 +507,6 @@
 				>
 			</File>
 			<File
-				RelativePath="ImageViewer.h"
-				>
-			</File>
-			<File
 				RelativePath="ImageViewerPlugin.h"
 				>
 			</File>
@@ -552,10 +516,6 @@
 			</File>
 			<File
 				RelativePath="Resource.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Shareaza.h"
 				>
 			</File>
 			<File
@@ -590,7 +550,12 @@
 		</Filter>
 		<Filter
 			Name="Generated Files"
+			SourceControlFiles="false"
 			>
+			<File
+				RelativePath=".\ImageViewer.h"
+				>
+			</File>
 			<File
 				RelativePath=".\ImageViewer_i.c"
 				>
