--- a/plugins/RARBuilder/RARBuilder_9.vcproj
+++ b/plugins/RARBuilder/RARBuilder_9.vcproj
@@ -44,6 +44,7 @@
 				Name="VCMIDLTool"
 				PreprocessorDefinitions="_DEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
 				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
 				InterfaceIdentifierFileName="$(InputName)_i.c"
@@ -137,6 +138,7 @@
 				PreprocessorDefinitions="_DEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				TargetEnvironment="3"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
 				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
 				InterfaceIdentifierFileName="$(InputName)_i.c"
@@ -228,6 +230,7 @@
 				Name="VCMIDLTool"
 				PreprocessorDefinitions="NDEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
 				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
 				InterfaceIdentifierFileName="$(InputName)_i.c"
@@ -327,6 +330,7 @@
 				PreprocessorDefinitions="NDEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				TargetEnvironment="3"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
 				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
 				InterfaceIdentifierFileName="$(InputName)_i.c"
@@ -464,9 +468,7 @@
 					>
 					<Tool
 						Name="VCMIDLTool"
-						TypeLibraryName="$(IntDir)/ShareazaOM.tlb"
 						OutputDirectory=""
-						HeaderFileName="ShareazaOM.h"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -474,9 +476,7 @@
 					>
 					<Tool
 						Name="VCMIDLTool"
-						TypeLibraryName="$(IntDir)/ShareazaOM.tlb"
 						OutputDirectory=""
-						HeaderFileName="ShareazaOM.h"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -484,9 +484,7 @@
 					>
 					<Tool
 						Name="VCMIDLTool"
-						TypeLibraryName="$(IntDir)/ShareazaOM.tlb"
 						OutputDirectory=""
-						HeaderFileName="ShareazaOM.h"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -494,9 +492,7 @@
 					>
 					<Tool
 						Name="VCMIDLTool"
-						TypeLibraryName="$(IntDir)/ShareazaOM.tlb"
 						OutputDirectory=""
-						HeaderFileName="ShareazaOM.h"
 					/>
 				</FileConfiguration>
 			</File>
@@ -547,15 +543,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\RARBuilder.h"
-				>
-			</File>
-			<File
 				RelativePath=".\resource.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Shareaza.h"
 				>
 			</File>
 			<File
@@ -591,7 +579,12 @@
 		</Filter>
 		<Filter
 			Name="Generated Files"
+			SourceControlFiles="false"
 			>
+			<File
+				RelativePath=".\RARBuilder.h"
+				>
+			</File>
 			<File
 				RelativePath=".\RARBuilder_i.c"
 				>
