--- a/plugins/RatDVDPlugin/RatDVDReader_9.vcproj
+++ b/plugins/RatDVDPlugin/RatDVDReader_9.vcproj
@@ -46,7 +46,10 @@
 				PreprocessorDefinitions="_DEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				TargetEnvironment="1"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
+				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
+				InterfaceIdentifierFileName="$(InputName)_i.c"
 				ProxyFileName=""
 			/>
 			<Tool
@@ -138,7 +141,10 @@
 				PreprocessorDefinitions="_DEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				TargetEnvironment="3"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
+				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
+				InterfaceIdentifierFileName="$(InputName)_i.c"
 				ProxyFileName=""
 			/>
 			<Tool
@@ -228,7 +234,10 @@
 				PreprocessorDefinitions="NDEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				TargetEnvironment="1"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
+				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
+				InterfaceIdentifierFileName="$(InputName)_i.c"
 				ProxyFileName=""
 			/>
 			<Tool
@@ -325,7 +334,10 @@
 				PreprocessorDefinitions="NDEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				TargetEnvironment="3"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
+				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
+				InterfaceIdentifierFileName="$(InputName)_i.c"
 				ProxyFileName=""
 			/>
 			<Tool
@@ -459,6 +471,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath="..\..\shareaza\Shareaza.idl"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -512,10 +528,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Shareaza.h"
-				>
-			</File>
-			<File
 				RelativePath=".\stdafx.h"
 				>
 			</File>
@@ -543,7 +555,12 @@
 		</Filter>
 		<Filter
 			Name="Generated Files"
+			SourceControlFiles="false"
 			>
+			<File
+				RelativePath=".\RatDVDReader.h"
+				>
+			</File>
 			<File
 				RelativePath=".\RatDVDReader_i.c"
 				>
