--- a/plugins/SearchExport/SearchExport.vcproj
+++ b/plugins/SearchExport/SearchExport.vcproj
@@ -45,7 +45,10 @@
 				PreprocessorDefinitions="_DEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				TargetEnvironment="1"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
+				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
+				InterfaceIdentifierFileName="$(InputName)_i.c"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
@@ -130,7 +133,10 @@
 				PreprocessorDefinitions="_DEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				TargetEnvironment="3"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
+				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
+				InterfaceIdentifierFileName="$(InputName)_i.c"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
@@ -216,7 +222,10 @@
 				PreprocessorDefinitions="NDEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				TargetEnvironment="1"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
+				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
+				InterfaceIdentifierFileName="$(InputName)_i.c"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
@@ -306,7 +315,10 @@
 				PreprocessorDefinitions="NDEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				TargetEnvironment="3"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
+				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
+				InterfaceIdentifierFileName="$(InputName)_i.c"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
@@ -393,82 +405,10 @@
 			<File
 				RelativePath=".\SearchExport.idl"
 				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCMIDLTool"
-						InterfaceIdentifierFileName="$(InputName)_i.c"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|x64"
-					>
-					<Tool
-						Name="VCMIDLTool"
-						InterfaceIdentifierFileName="$(InputName)_i.c"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCMIDLTool"
-						InterfaceIdentifierFileName="$(InputName)_i.c"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|x64"
-					>
-					<Tool
-						Name="VCMIDLTool"
-						InterfaceIdentifierFileName="$(InputName)_i.c"
-					/>
-				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\..\shareaza\Shareaza.idl"
 				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCMIDLTool"
-						TypeLibraryName="$(IntDir)/Shareaza.tlb"
-						HeaderFileName="Shareaza.h"
-						InterfaceIdentifierFileName="Shareaza_i.c"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|x64"
-					>
-					<Tool
-						Name="VCMIDLTool"
-						TypeLibraryName="$(IntDir)/Shareaza.tlb"
-						HeaderFileName="Shareaza.h"
-						InterfaceIdentifierFileName="Shareaza_i.c"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCMIDLTool"
-						TypeLibraryName="$(IntDir)/Shareaza.tlb"
-						HeaderFileName="Shareaza.h"
-						InterfaceIdentifierFileName="Shareaza_i.c"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|x64"
-					>
-					<Tool
-						Name="VCMIDLTool"
-						TypeLibraryName="$(IntDir)/Shareaza.tlb"
-						HeaderFileName="Shareaza.h"
-						InterfaceIdentifierFileName="Shareaza_i.c"
-					/>
-				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\stdafx.cpp"
@@ -553,49 +493,14 @@
 		</Filter>
 		<Filter
 			Name="Generated Files"
+			SourceControlFiles="false"
 			>
 			<File
-				RelativePath=".\SearchExport_h.h"
+				RelativePath=".\SearchExport.h"
 				>
 			</File>
 			<File
 				RelativePath=".\SearchExport_i.c"
-				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="0"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|x64"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="0"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="0"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|x64"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="0"
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath=".\Shareaza_i.c"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
