--- a/plugins/VirusTotal/VirusTotal.vcproj
+++ b/plugins/VirusTotal/VirusTotal.vcproj
@@ -45,7 +45,10 @@
 				PreprocessorDefinitions="_DEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				TargetEnvironment="1"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
+				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
+				InterfaceIdentifierFileName="$(InputName)_i.c"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
@@ -130,7 +133,10 @@
 				PreprocessorDefinitions="_DEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				TargetEnvironment="3"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
+				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
+				InterfaceIdentifierFileName="$(InputName)_i.c"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
@@ -216,7 +222,10 @@
 				PreprocessorDefinitions="NDEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				TargetEnvironment="1"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
+				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
+				InterfaceIdentifierFileName="$(InputName)_i.c"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
@@ -306,7 +315,10 @@
 				PreprocessorDefinitions="NDEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				TargetEnvironment="3"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
+				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
+				InterfaceIdentifierFileName="$(InputName)_i.c"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
@@ -383,6 +395,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\shareaza\Shareaza.idl"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -445,10 +461,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Shareaza.h"
-				>
-			</File>
-			<File
 				RelativePath=".\stdafx.h"
 				>
 			</File>
@@ -481,7 +493,12 @@
 		</Filter>
 		<Filter
 			Name="Generated Files"
+			SourceControlFiles="false"
 			>
+			<File
+				RelativePath=".\VirusTotal.h"
+				>
+			</File>
 			<File
 				RelativePath=".\VirusTotal_i.c"
 				>
