--- a/plugins/SkinScanSKS/SkinScanSKS_9.vcproj
+++ b/plugins/SkinScanSKS/SkinScanSKS_9.vcproj
@@ -44,6 +44,7 @@
 				Name="VCMIDLTool"
 				PreprocessorDefinitions="_DEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
 				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
 				InterfaceIdentifierFileName="$(InputName)_i.c"
@@ -139,6 +140,7 @@
 				PreprocessorDefinitions="_DEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				TargetEnvironment="3"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
 				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
 				InterfaceIdentifierFileName="$(InputName)_i.c"
@@ -233,6 +235,7 @@
 				Name="VCMIDLTool"
 				PreprocessorDefinitions="NDEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
 				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
 				InterfaceIdentifierFileName="$(InputName)_i.c"
@@ -333,6 +336,7 @@
 				PreprocessorDefinitions="NDEBUG"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				TargetEnvironment="3"
+				TypeLibraryName="$(IntDir)/$(InputName).tlb"
 				HeaderFileName="$(InputName).h"
 				DLLDataFileName=""
 				InterfaceIdentifierFileName="$(InputName)_i.c"
@@ -428,8 +432,6 @@
 					<Tool
 						Name="VCMIDLTool"
 						AdditionalIncludeDirectories=""
-						TypeLibraryName="$(IntDir)/ShareazaOM.tlb"
-						HeaderFileName="ShareazaOM.h"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -438,8 +440,6 @@
 					<Tool
 						Name="VCMIDLTool"
 						AdditionalIncludeDirectories=""
-						TypeLibraryName="$(IntDir)/ShareazaOM.tlb"
-						HeaderFileName="ShareazaOM.h"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -448,8 +448,6 @@
 					<Tool
 						Name="VCMIDLTool"
 						AdditionalIncludeDirectories=""
-						TypeLibraryName="$(IntDir)/ShareazaOM.tlb"
-						HeaderFileName="ShareazaOM.h"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -458,8 +456,6 @@
 					<Tool
 						Name="VCMIDLTool"
 						AdditionalIncludeDirectories=""
-						TypeLibraryName="$(IntDir)/ShareazaOM.tlb"
-						HeaderFileName="ShareazaOM.h"
 					/>
 				</FileConfiguration>
 			</File>
@@ -558,14 +554,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Shareaza.h"
-				>
-			</File>
-			<File
-				RelativePath=".\SkinScanSKS.h"
-				>
-			</File>
-			<File
 				RelativePath=".\StdAfx.h"
 				>
 			</File>
@@ -594,7 +582,12 @@
 		</Filter>
 		<Filter
 			Name="Generated Files"
+			SourceControlFiles="false"
 			>
+			<File
+				RelativePath=".\SkinScanSKS.h"
+				>
+			</File>
 			<File
 				RelativePath=".\SkinScanSKS_i.c"
 				>
